# MOSAIC-SoC

./: .gitignore  DASHBOARD.md  Makefile  README.md  core-v-mini-mcu.core  mosaic.yaml  oh-my-soc  pyproject.toml
configs/: mosaic_all_cores.yaml  mosaic_berkeley.yaml  mosaic_boom.yaml  mosaic_boom_titan.yaml  mosaic_cva6.yaml  mosaic_floonoc.yaml  mosaic_hazard3.yaml  mosaic_log.yaml  mosaic_log_poc.yaml  mosaic_new_cores.yaml  mosaic_picorv32.yaml  mosaic_rocket.yaml  mosaic_rocket_titan.yaml  mosaic_sim.yaml  mosaic_snitch.yaml  mosaic_titan_floonoc.yaml  mosaic_titan_log.yaml  mosaic_titan_obi.yaml  mosaic_wake_demo.yaml  mosaic_wake_demo_log.yaml  prompted_demo.yaml  titan_nomem.yaml
demo/: 01_soc_from_prompt.sh  02_wrap_new_core.sh  README.md
docs/: general_multicore_soc_generator_roadmap.md  mosaic_diagram.drawio
docs/Plan_and_Progress/: MOSAIC-SoC_Dashboard.xlsx  MOSAIC-SoC_Project_Plan_and_Progress.xlsx
flow/librelane/: Makefile  README.md  chip_top.sdc  config.yaml  config_classic.yaml  core_classic.sdc  pdn_cfg.tcl
harness/: EVALUATION.md  README.md  __init__.py  __main__.py  agent.py  agent_tools.py  core.py  events.py  llm.py
harness/skills/: __init__.py  config_author.py  doc_gen.py  drc_triage.py  flow_runner.py  setup_wizard.py  soc_from_prompt.py  tb_matrix.py  tb_smith.py  topo_viz.py  wrapper_smith.py
scripts/: fusesoc-setup.sh
tb/: ext_bus.sv  tb_top.sv  testharness.sv.tpl
tutorial/: 01-generator.md  02-harness.md  03-opencode-go.md  README.md  inspect_manifest.py  run_all.sh  troubleshooting.md
util/: python-requirements.txt
(+163 files in other folders)
